--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: jack;
+  src: url('./fonts/JackSimba.otf') format("truetype");
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+  font-family: teen;
+  src: url('./fonts/teen.ttf') format("truetype");
+}
+@font-face {
+  font-family: roboto;
+  src: url('./fonts/Roboto.ttf') format("truetype");
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+/* For Mobile Phones Portrait or Landscape View */
+@media screen and (max-device-width: 640px) {
+  .input-search {
+    width: 100% !important;
+  }
+  .search-button {
+    width: 100% !important;
+  }
+  .cat-card {
+    width: 100% !important;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* For Tablet View */
+@media screen and (min-device-width: 768px)
+and (max-device-width: 1024px) {
+  .input-search {
+    width: 80% !important;
+  }
+  .search-button {
+    width: 80% !important;
+  }
+  .cat-card {
+    width: 80% !important;
+  }
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.padding-fix{
+  padding: 12px;
 }
